# generator-elv_wasm

./: README.md  package-lock.json  package.json
generators/app/: index.js
generators/app/templates/: Cargo.toml  package.json
generators/app/templates/as/: lib.ts
generators/app/templates/src/: lib.rs
generators/app/templates/tests/: lib.rs
