[package]

name = "<%= name %>"
version = "0.0.1"
authors = ["<%= author %> <<%= email %>>"]
license = "<%= license %>"
readme = "README.md"
repository = "<%= repoUrl %>"
description = "<%= description %>"

[lib]
name = "<%= name %>"
crate-type = ["rlib", "cdylib"]

[dependencies]
elvwasm = {git = "https://github.com/eluv-io/elv_wasm", branch = "main"}
wapc = "0.10.1"
wapc-guest = "0.4.0"
serde = "*"
serde_json = "*"
serde_derive = "*"